<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_marginBottom="1pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="right|center"
        android:textColor="@color/white"
        android:textSize="20pt"
        android:inputType="textPersonName"
        android:text="0" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSeven"
                android:text="@string/_7"
                android:textSize="20sp"
                android:onClick="numberEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEight"
                android:text="@string/_8"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNine"
                android:text="@string/_9"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                android:text="@string/div"
                android:textSize="20sp"
                android:onClick="operatorEvent"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:background="@color/orange" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_marginBottom="1pt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFour"
                android:text="@string/_4"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:textColor="@color/white"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnFive"
                android:text="@string/_5"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSix"
                android:text="@string/_6"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:onClick="numberEvent"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_marginRight="1pt"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="operatorEvent"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="1pt"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOne"
                android:text="@string/one"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTwo"
                android:text="@string/two"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:onClick="numberEvent"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnThree"
                android:text="@string/three"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:textColor="@color/white"
                android:onClick="numberEvent"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinus"
                android:text="@string/minus"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:onClick="operatorEvent"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:background="@color/orange" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="1pt">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAC"
                android:text="@string/percent"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:onClick="percentEvent"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZero"
                android:text="@string/zero"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:onClick="numberEvent"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDot"
                android:text="."
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:onClick="numberEvent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlus"
                android:text="@string/plus"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:onClick="operatorEvent"
                android:layout_width="30pt"
                android:background="@color/orange" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginBottom="1pt"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnC"
                android:text="@string/cancel"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:layout_width="30pt"
                android:onClick="clearEvent"
                android:background="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                android:text="@string/equal"
                android:textSize="20sp"
                android:layout_marginRight="1pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="equalEvent"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:background="@color/orange" />
        </TableRow>

    </TableLayout>
</LinearLayout>